# kailo_beewell_dashboard_package

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: authentication.md  conf.py  contents.rst  css.md  dashboard_maintenance.md  environments.md  hosting_data.md  index.rst  package_maintenance.md  standard_survey_scores.md  streamlit_community_cloud.md
kailo_beewell_dashboard/: __init__.py  about_page.py  authentication.py  bar_charts.py  bar_charts_text.py  convert_image.py  create_and_aggregate_data.py  explore_results.py  grammar.py  images.py  import_data.py  map.py  page_setup.py  reshape_data.py  response_labels.py  reuse_text.py  score_descriptions.py  static_report.py  stylable_container.py  summary_rag.py  switch_page_button.py  synthesise_aggregate.py  synthesise_demographic.py  synthesise_responses.py  synthesise_scores.py  topic_labels.py  who_took_part.py
kailo_beewell_dashboard/css/: static_report_style.css  style.css
