[tool.poetry]
name = "kailo-beewell-dashboard"
version = "0.3.2"
description = ""
authors = ["ellengoddard <ellenamaliaa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pip = "24.0"
numpy = "1.26.0"
pandas = "2.1.1"
plotly = "5.9.0"
pymysql = "1.1.0"
markdown = "3.5.2"
kaleido = "0.2.1"
weasyprint = "60.2"
django = "4.2.9"
ipykernel = "6.29.0"
streamlit = ">=1.32.2"
twine = "5.0.0"
sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"
myst-parser = "2.0.0"
sphinx-autoapi = "3.0.0"
matplotlib = "3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
